--- a/myresume.html
+++ b/myresume.html
@@ -747,12 +747,12 @@ body {
               <span class="profile-pic-container">
                 <div class="profile-pic">
                   <img class="media-object img-circle center-block"  data-src="holder.js/100x100"
-                    alt="Martin Sloan" src="http://www.gravatar.com/avatar/f4a5dd68d465d84c39ec2b2da91c936f?s=100&r=pg&d=mm" itemprop="image">
+                    alt="Martin Sloan" src="https://www.gravatar.com/avatar/f4a5dd68d465d84c39ec2b2da91c936f" itemprop="image">
                 </div>
 
                 <div class="name-and-profession">
                   <h3 class="text-center text-bolder name" itemprop="name"> Martin Sloan</h3>
-                  <h5 class="text-muted text-center" itemprop="jobTitle">Unified Communications Engineer &amp; Full Stack Laravel Developer</h5>
+                  <h5 class="text-muted text-center" itemprop="jobTitle">Unified Communications Engineer Full Stack Laravel Developer</h5>
                 </div>
               </span>
               <hr>
@@ -784,7 +784,7 @@ body {
                     </span>
 
                     <span class="info">
-                      <a href="/cdn-cgi/l/email-protection#0c616d7e786562227f60636d624c676d7e616d21786967226f6361" class="link-disguise" itemprop="email"><span class="__cf_email__" data-cfemail="1f727e6d6b7671316c73707e715f747e6d727e326b7a74317c7072">[email&#160;protected]</span><script cf-hash='f9e31' type="text/javascript">
+                      <a href="/cdn-cgi/l/email-protection#89e4e8fbfde0e7a7fae5e6e8e7c9e2e8fbe4e8a4fdece2a7eae6e4" class="link-disguise" itemprop="email"><span class="__cf_email__" data-cfemail="6f020e1d1b0601411c03000e012f040e1d020e421b0a04410c0002">[email&#160;protected]</span><script cf-hash='f9e31' type="text/javascript">
 /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */</script></a>
                     </span>
                   </div>
@@ -838,7 +838,7 @@ body {
                   </h4>
 
                   <div class="content" itemprop="description">
-                    Martin is a dedicated, expert level Unified Communications engineer and avid web application developer.  Before starting Karma-Tek Consulting, Martin worked for several Cisco Gold Partners where he gained valuable experience designing, implementing and supporting global enterprise communications systems.  During that time he self-started his web application career by learning modern MVC frameworks, including Laravel 4.2, in order to leverage the Unified Communications SOAP and RESTful API&#x27;s.  He is still writing custom applications for Cisco Partners, but is also pursuing further opportunities to expand and continue his growth in the application development space with a focus on Laravel 5.1
+                    Martin is a dedicated, subject matter expert level Unified Communications engineer and avid web application developer.  Before starting Karma-Tek Consulting, Martin worked for several Cisco Gold Partners where he gained valuable experience designing, implementing and supporting global enterprise communications systems.  During that time he self-started his web application career by learning modern MVC frameworks, including Laravel 4.2, in order to leverage the Unified Communications SOAP and RESTful API&#x27;s.  He is still writing custom applications for Cisco Partners, but is also pursuing further opportunities to expand and continue his growth in the application development space with a focus on Laravel 5.1
                   </div>
                 </div>
               </div>
@@ -999,6 +999,7 @@ body {
 
                               <div class="space-top labels">
                                   <span class="label label-keyword">Laravel Homestead</span>
+                                  <span class="label label-keyword">Laravel Forge</span>
                                   <span class="label label-keyword">Composer</span>
                                   <span class="label label-keyword">Artisan</span>
                                   <span class="label label-keyword">npm</span>
@@ -1055,7 +1056,7 @@ body {
                           <div class="content">
                             <p class="clear-margin relative">
 
-                              <strong>Cresson, Pa, Bachelor</strong>,&nbsp;
+                              <strong>Cresson, Pa</strong>,&nbsp;
                               Mount Aloysious College
                             </p>
                             <p class="text-muted">
@@ -1078,8 +1079,6 @@ body {
                         <li class="card card-nested">
                           <div class="content">
                             <p class="clear-margin relative">
-
-                              <strong>, </strong>,&nbsp;
                               Certifications
                             </p>
                             <p class="text-muted">
@@ -1160,6 +1159,7 @@ body {
                     </div>
                   </div>
                 </div>
+
             </div>
           </div>
         </section>
